[package]
authors = ["Jeremie Veillet <jeremie.veillet@gmail.com>"]
categories = ["command-line-utilities"]
description = "Git plugin to automatically name branches based on a convention."
homepage = "https://github.com/jveillet/git-leaf"
keywords = ["cli", "git", "plugin"]
license = "GNU GPLv3"
name = "git-leaf"
readme = "README.md"
repository = "https://github.com/jveillet/git-leaf"
version = "1.1.0"

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
regex = "1.5"

[[bin]]
name = "git-leaf"
path = "src/main.rs"
